--- a/views/user_forgot_password.ejs
+++ b/views/user_forgot_password.ejs
@@ -1,28 +1,59 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/user_forgot_password.css">
     <title>
-
         <%= title %>
-
     </title>
 </head>
 <body>
 
-    <h2>
-        Trouble Logging In?
-    </h2>
+    <div class="bg">
+        <h2>
+            Trouble Logging In?
+        </h2>
+    
+        <form action="/users/forgot-password-email" method="POST" style="padding: 20px;">
+    
+            <input type="email"  name="email" id="" placeholder="email" required>
+            
+            <input type="submit" value="Confirm">
+    
+        </form>
+    </div>
 
-    <form action="/users/forgot-password-email" method="POST" style="padding: 20px;">
-
-        <input type="email"  name="email" id="" placeholder="email" required>
-        
-        <input type="submit" value="Confirm">
-
-    </form>
+    
     
 </body>
-</html>
+</html> -->
+
+
+<link rel="stylesheet" href="/css/user_forgot_password.css">
+
+<div class="bg">
+    <div class="elements">
+        <h2>
+            Trouble Logging In?
+        </h2>
+    
+        <form action="/users/forgot-password-email" method="POST" style="padding: 20px;">
+    
+            <input type="email"  name="email" id="" placeholder="Enter Your Email Address" required>
+            
+            <input type="submit" value="Confirm" class="confirmButton">
+    
+        </form>
+    </div>
+
+
+    <div class="cb_logo">
+        <img src="/images/cb_logo2-removebg-preview.png" alt="">
+        <h1>CloneBook</h1>
+    </div>
+    
+</div>
+
+
