--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,16 +1,40 @@
-<h1>Sign Up</h1>
 
-<form action="/users/create" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required>
-    <input type="email" name="email" placeholder="Your Email" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <input type="password" name="confirm_password" placeholder="Confirm Password" required>
-    <input type="submit" value="Sign Up">
+<link rel="stylesheet" href="/css/user_sign_up.css">
 
-</form>
+<div class="bg">
+    <div class="allitems">
+    
+        <h1>Sign Up</h1>
 
-<p>
-    <a href="/users/auth/google">
-        Google Sign IN/Sign uP
-    </a>
-</p>
+        <div class="credentials">
+            <form action="/users/create" method="POST">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <br>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <br>
+                <input type="password" name="password" placeholder="Password" required>
+                <br>
+                <input type="password" name="confirm_password" placeholder="Confirm Password" required>
+                <br>
+                <input type="submit" value="Sign Up" class="signUp HOVER">
+            
+            </form>
+        </div>
+        <h3> -----------------------------OR-------------------------------- </h3>
+        <div class="google-auth ">
+            <button >
+                <a href="/users/auth/google" >
+                    Sign Up With Google
+                </a>
+            </button>
+        </div>
+
+    </div>
+
+    <div class="cb_logo">
+        <img src="/images/cb_logo2-removebg-preview.png" alt="">
+        <h1>CloneBook</h1>
+    </div>
+    
+</div>
+
