--- a/assets/css/chat_box.css
+++ b/assets/css/chat_box.css
@@ -1,45 +1,124 @@
+body{    
+  background: linear-gradient(90deg, #000000f2, #3498db, #000000f2);
+}
 #user-chat-box {
   position: fixed;
-  bottom: 10px;
-  right: 10px;
-  border: 1px dashed grey;
-  height: 350px;
-  width: 300px;
-  background: white;
+  border: 2px solid white;
+  height: 82%;
+  width: 55%;
+  margin-left: 5%;
+  margin-top: 94px;
+  background: transparent;
+  border-radius: 10px;
+  box-shadow: 0px 5px 16px 0px #000000ba;
+}
+#chat-messages-list {
+  list-style: none;
+  padding: 10px;
+  height: 80%;
+  background-color: transparent;
+  overflow: auto; 
+}
+.other-message {
+  text-align: left;
+  padding: 5px; 
+}
+.other-message span {
+  display: inline-block;
+  padding: 15px;
+  background-color: #ffa0a0; 
+  border-radius: 10px;
+}
+.self-message {
+  text-align: right;
   padding: 5px;
-  box-shadow: 1px 1px 1px 1px lightgrey; }
-  #user-chat-box #chat-messages-list {
-    list-style: none;
-    padding: 10px;
-    height: 70%;
-    background-color: white;
-    overflow: auto; }
-    #user-chat-box #chat-messages-list .other-message {
-      text-align: left;
-      padding: 5px; }
-      #user-chat-box #chat-messages-list .other-message span {
-        display: inline-block;
-        padding: 15px;
-        background-color: #ffa0a0; }
-    #user-chat-box #chat-messages-list .self-message {
-      text-align: right;
-      padding: 5px; }
-      #user-chat-box #chat-messages-list .self-message span {
-        display: inline-block;
-        padding: 15px;
-        background-color: #a0dcff; }
-  #user-chat-box #chat-message-input-container {
-    height: 24%;
-    width: 100%;
-    display: flex;
-    flex-direction: row; }
-    #user-chat-box #chat-message-input-container #chat-message-input {
-      height: 50%;
-      width: 70%; }
-    #user-chat-box #chat-message-input-container #send-message {
-      height: 50%;
-      width: 30%;
-      font-size: 25px;
-      color: white;
-      border: none;
-      background: #58d258; }
+}
+.self-message span {
+  display: inline-block;
+  padding: 15px;
+  background-color: #a0dcff; 
+  border-radius: 10px;
+}
+#chat-message-input-container {
+  display: flex;
+  height: 7%;
+  justify-content: space-between;
+
+} 
+#send-message {
+  width: 20%;
+  height: 100%;
+  margin-right: 33px;
+  border-radius: 10px;
+  background: #51ac19;
+  color: wheat;
+  font-size: x-large;
+  border: 3px solid white;
+  box-shadow: 0px 5px 16px 0px #000000ba;
+}
+#chat-message-input {
+  width: 70%;
+  height: 100%;
+  border-radius: 10px;
+  margin-left: 31px;
+  border: 3px solid white;
+  background: transparent;
+  font-size: large;
+  box-shadow: 0px 5px 16px 0px #000000ba;
+  text-align: center;
+  color: white;
+}
+::placeholder{
+  color: white;
+}
+.friends_section{
+  position: fixed;
+  border: 2px solid white;
+  height: 82%;
+  width: 30%;
+  margin-left: 65%;
+  margin-top: 94px;
+  background: transparent;
+  border-radius: 10px;
+  box-shadow: 0px 5px 16px 0px #000000ba;
+}
+.friends_section h1{
+  text-align: center;
+  color: white;
+  border-radius: 10px;
+  border-bottom: 2px solid white;
+  padding-bottom: 20px;
+}
+.friend_name{
+  text-decoration: none;
+  color: white;
+  list-style-type: white disc;
+}
+
+
+
+/* media queries for phone*/
+
+@media screen and (max-width: 1100px){
+  #user-chat-box {
+    position: absolute;
+    width: 90%;
+    height: 90%;
+    margin-top: 100vh;
+  }
+  .friends_section{
+    position: absolute;
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 10%;
+  }
+}
+/* for tab */
+@media screen and (max-width: 2000px){
+  
+
+}
+@media screen and (max-width: 2500px){
+  
+}
+
