--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,13 +1,13 @@
-#layout-header nav {
+/* #layout-header nav {
   display: flex;
   justify-content: space-between;
   padding: 0 10px;
-  background: #2196f3;
+  /* background: linear-gradient(90deg, #d80e30, #2b67be);
+  background-color: #2c11a6e0;
   color: white;
   box-shadow: 1px 1px 1px 1px lightgrey; }
-  #layout-header nav .mini-logo p {
+  #layout-header nav .mini-logo h2{
     margin: 5px;
-    font-size: 1.4rem;
     font-weight: bold; }
   #layout-header nav .auth-links ul {
     margin: 5% 5px;
@@ -18,3 +18,72 @@
   #layout-header nav a {
     color: white;
     text-decoration: none; }
+ */
+
+#layout-header{
+  position: fixed;
+    width: 100%;
+    background: linear-gradient(90deg, #0e55d8, rgb(212, 48, 190));
+    z-index: 10;
+}
+
+#layout-header nav{
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 1px 1px 1px 1px lightgrey;
+  background: linear-gradient(90deg, #002a46, #000000ed);
+}
+#layout-header nav .mini-logo h2{
+  margin: 5px;
+  font-weight: bold; 
+  color: white;
+}
+/* Style The Dropdown Button */
+.dropbtn {
+  background-color: #386fd6c4;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  width: 100px;
+  border-radius: 10px;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #296f9e;
+  border-radius: 10px;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 70%);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #000000bb}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #2f70eac4;
+}
