--- a/assets/css/user_profile.css
+++ b/assets/css/user_profile.css
@@ -1,2 +1,155 @@
-body {
-  background-color: lightblue; }
+body,html{
+  background: linear-gradient(90deg, #000000f2, #3498db, #000000f2);
+}
+.bg {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  /* background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
+  margin-left: 10%;
+}
+.image_and_details{
+  margin-top: 4%;
+  width: 40%;
+}
+.user_avatar{
+  margin-top: 10%;
+}
+.user_avatar h2{
+  margin-top: 35px;
+  color: white;
+}
+.user_avatar img {
+  height: 260px;
+  width: 260px;
+  margin-left: 14%;
+  border-radius: 159px;
+  box-shadow: 0px 5px 16px 0px #000000ba;
+}
+.update_credentials {
+  margin-top: 6%;
+  background: transparent;
+  margin-left: -12%;
+  border-radius: 10px;
+  flex-direction: column;
+  display: flex;
+}
+.update_credentials h1{
+  color: white;
+  text-align: left;
+  margin-left: 50px;
+}
+.update_credentials form {
+  background: transparent;
+  margin-left: 8%;
+  border-radius: 10px;
+  width: 450px;
+  flex-direction: column;
+  display: flex;
+}
+.update_credentials form input {
+  background: transparent;
+  border-radius: 10px;
+  color: white;
+  border: 2px solid white;
+  margin-bottom: 29px;
+  height: 38px;
+  text-align: center;
+  font-size: 24px;
+  box-shadow: 0px 5px 16px 0px #000000ba;
+}
+.posts_list_container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;margin-top: 50px;
+}
+.add_friend_button{
+    box-shadow: 0px 5px 16px 0px #000000ba;
+    background: #0d3e87af;
+    border: 2px solid white;
+    border-radius: 8px;
+    padding: 15px;
+}
+.toggle-friend-button{
+  text-decoration: none;
+  color: white;
+  background: transparent;
+  font-size: x-large;
+  
+}
+
+
+/* media queries for phone*/
+
+@media screen and (max-width: 1100px){
+  .bg{
+    flex-direction: column;
+    margin-left: 0px;
+    align-items: center;
+  }
+  .image_and_details{
+    margin-top: 4%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    padding-bottom: 20px;
+  }
+  .user_avatar{
+    margin-left: none;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+  }
+  .user_avatar h2{
+    display: block;
+    margin-top: 0px;
+    color: white;
+  }
+  .user_avatar img{
+    margin-left: 0;
+    margin-bottom: 30px;
+  }
+  .update_credentials {
+    margin-left: 0;
+    border-radius: 10px;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+  }
+  .update_credentials h1{
+    color: white;
+    text-align: center;
+  }
+  .update_credentials form {
+    margin-left: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+  .update_credentials form input {
+    background: transparent;
+    border-radius: 10px;
+    color: white;
+    border: 2px solid white;
+    margin-bottom: 29px;
+    height: 38px;
+    width: 450px;
+    text-align: center;
+    font-size: 24px;
+    box-shadow: 0px 5px 16px 0px #000000ba;
+  } 
+  
+}
+/* for tab */
+@media screen and (max-width: 2000px){
+  
+
+}
+@media screen and (max-width: 2500px){
+  
+}
