--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,4 +1,4 @@
-<footer id="layout-footer">
+<<footer id="layout_footer">
     <div>
         <p>
             &#169; All Rights Reserved
@@ -8,12 +8,12 @@
     <div>
         <nav class="footer-nav">
             <ul>
-                <li>
+                <!-- <li>
                     <a href="/">Home</a>
-                </li>
-                <li>
+                </li> -->
+                <!-- <li>
                     <a href="/users/profile">Profile</a>
-                </li>
+                </li> -->
             </ul>
         </nav>
     </div>
