--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -112,6 +112,7 @@ h1{
     position: fixed;
     top: 52%;
     margin-left: 2%;
+    margin-top:2%;
     left: 60%;
     overflow: hidden;
     border-radius: 10px;
