--- a/assets/css/chat_box.css
+++ b/assets/css/chat_box.css
@@ -1,16 +1,22 @@
 body{    
   background: linear-gradient(90deg, #000000f2, #3498db, #000000f2);
 }
+.chat_and_friens_section{
+  display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 100%;
+}
 #user-chat-box {
-  position: fixed;
-  border: 2px solid white;
-  height: 82%;
-  width: 55%;
-  margin-left: 5%;
-  margin-top: 94px;
-  background: transparent;
-  border-radius: 10px;
-  box-shadow: 0px 5px 16px 0px #000000ba;
+    border: 2px solid white;
+    height: 80%;
+    overflow: auto;
+    margin-left: 5%;
+    width: 62%;
+    margin-top: 94px;
+    background: transparent;
+    border-radius: 10px;
+    box-shadow: 0px 5px 16px 0px #000000ba;
 }
 #chat-messages-list {
   list-style: none;
@@ -100,17 +106,23 @@ body{
 /* media queries for phone*/
 
 @media screen and (max-width: 1100px){
-  #user-chat-box {
-    position: absolute;
-    width: 90%;
-    height: 90%;
-    margin-top: 100vh;
+  .chat_and_friens_section{
+    flex-direction: column-reverse;
+    justify-content: center;
+    height: auto;
   }
-  .friends_section{
-    position: absolute;
+  #user-chat-box {
     width: 90%;
     margin-left: 5%;
-    margin-top: 10%;
+    height: 1319px;
+    overflow: scroll;
+    min-height: 300px;
+  }
+  .friends_section{
+    width: 90%;
+    margin-left: 5%;
+    height: auto;
+    min-height: 500px;
   }
 }
 /* for tab */
