--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -34,6 +34,7 @@ h1{
     border: 2px solid rgb(255, 255, 255);
     border-radius: 10px;
     background: #0d3e87af;
+    width: 200px;
 }
 .new_post_form{
     width: 85%;
@@ -48,6 +49,7 @@ h1{
     color: white;
     margin-left: 5%;
     margin-top: 4%;
+    width: 50%;
 }
 .caption{
     font-size: x-large;
@@ -108,13 +110,13 @@ h1{
 }
 .people_you_may_know_section {
     width: 32%;
-    min-height: 300px;
+    height: 300px;
     position: fixed;
     top: 52%;
     margin-left: 2%;
     margin-top:2%;
     left: 60%;
-    overflow: hidden;
+    overflow: scroll;
     border-radius: 10px;
     border: 2px solid white;
     box-shadow: 0px 5px 16px 0px #000000ba;
