--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -121,6 +121,16 @@ h1{
     border: 2px solid white;
     box-shadow: 0px 5px 16px 0px #000000ba;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.people_you_may_know_section::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.people_you_may_know_section {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
 .people_you_may_know_section h3{
     box-sizing: border-box;
     font-size: x-large;
