--- a/assets/css/mainPage.css
+++ b/assets/css/mainPage.css
@@ -118,11 +118,12 @@ h2{
 
 @media screen and (max-width: 1100px){
     .bg{
+        flex-direction: column;
         justify-content: center;
     }
     .cb_logo{
-        height:0;
-        width:0;
+        height:50%;
+        width:50%;
     }
     .cb_logo h1{
         font-size:0px;
