--- a/views/mailers/comments/new_password.ejs
+++ b/views/mailers/comments/new_password.ejs
@@ -9,7 +9,7 @@
         </p>
         <br>
         <p>
-            <a href="http://localhost:8000/users/resetPassword/<%= id %>">Reset password</a>
+            <a href="https://clonebook-app.herokuapp.com/users/resetPassword/<%= id %>">Reset password</a>
         </p>
         <br>
         <br>
